modification du template et ajout du fichier 'traitement_formulaire' pour verifier que la base de donnée et correctement rempli avant de diriger vers l'accueil

--- a/styles.profil.css
+++ b/styles.profil.css
@@ -93,7 +93,7 @@ body {
     margin-top: 10%;
 }
 
-.profile-work a {
+.profile-work .a {
     text-decoration: none;
     color: #495057;
     font-weight: 600;
