--- a/styles.profil.css
+++ b/styles.profil.css
@@ -100,6 +100,13 @@ body {
     font-size: 14px;
 }
 
+.profile-work a {
+    text-decoration: none;
+    color: #495057;
+    font-weight: 600;
+    font-size: 14px;
+}
+
 .profile-work ul {
     list-style: none;
 }
